# cpp-linux-playground

./: .cursorrules  .gitignore  CMakeLists.txt  CMakePresets.json  GEMINI.md  PROJECT.md  QWEN.md  README.md  create_http_client.cpp  docker-compose.yml
.devcontainer/: Dockerfile  devcontainer.json  reinstall-cmake.sh
.github/workflows/: ci.yml
docker/: Dockerfile
docs/: development-troubleshooting.md  docker-development.md  docker_test_result.txt  project_completion_and_ai_coding.md  study_advice.md  test_pass_criteria.md
phase1/: CMakeLists.txt
phase1/cli-tools/: CMakeLists.txt
phase1/cli-tools/include/: grep.h  ls.h  wc.h
phase1/cli-tools/src/: grep_lib.cpp  grep_main.cpp  ls.cpp  ls_lib.cpp  ls_main.cpp  wc_lib.cpp  wc_main.cpp
phase1/json-parser/: CMakeLists.txt
phase1/json-parser/include/: json.h
phase1/json-parser/src/: json.cpp  json_example.cpp
phase1/json-parser/tests/: CMakeLists.txt
phase1/logger/: CMakeLists.txt
phase1/logger/include/: logger.h
phase1/logger/src/: logger.cpp  logger_example.cpp
phase2/: CMakeLists.txt
phase2/memory-pool/: CMakeLists.txt
phase2/memory-pool/include/: fixed_block_allocator.h  memory_pool.h
phase2/memory-pool/src/: fixed_block_allocator.cpp  main.cpp  memory_pool.cpp
phase2/memory-pool/tests/: CMakeLists.txt
phase2/process-manager/: CMakeLists.txt
phase2/process-manager/include/: process_reader.h  system_info.h
phase2/process-manager/src/: main.cpp  process_reader.cpp  system_info.cpp
phase2/process-manager/tests/: CMakeLists.txt
phase2/threaded-downloader/: CMakeLists.txt
phase2/threaded-downloader/include/: download_manager.h  downloader.h  utils.h
phase2/threaded-downloader/src/: download_manager.cpp  downloader.cpp  main.cpp  utils.cpp
phase2/threaded-downloader/tests/: downloader_test.cpp
phase3/: CMakeLists.txt
phase3/http-server/: CMakeLists.txt
phase3/http-server/include/: http_connection_handler.h  http_request.h  http_response.h  thread_pool.h
phase3/http-server/src/: http_connection_handler.cpp  http_request.cpp  http_response.cpp  main.cpp  thread_pool.cpp
phase3/tcp-chat-room/: CMakeLists.txt
phase3/tcp-chat-room/include/: chat_client.h  chat_server.h  chat_session.h  thread_pool.h
phase3/tcp-chat-room/src/: chat_client.cpp  chat_server.cpp  chat_session.cpp  client_main.cpp  server_main.cpp  thread_pool.cpp
phase3/tcp-file-transfer/: CMakeLists.txt
phase3/tcp-file-transfer/include/: file_transfer_protocol.h  tcp_file_client.h  tcp_file_server.h  thread_pool.h
phase3/tcp-file-transfer/src/: file_transfer_protocol.cpp  main_client.cpp  main_server.cpp  tcp_file_client.cpp  tcp_file_server.cpp  thread_pool.cpp
phase4/: CMakeLists.txt
phase4/crawler/: CMakeLists.txt
phase4/crawler/include/: crawler.h  http_client.h  thread_pool.h  url_parser.h
phase4/crawler/src/: crawler.cpp  http_client.cpp  main.cpp  thread_pool.cpp  url_parser.cpp
phase4/mini-redis/: CMakeLists.txt
phase4/mini-redis/include/: kv_store.h  protocol.h  redis.h  redis_client.h  redis_server.h
phase4/mini-redis/src/: kv_store.cpp  main_client.cpp  main_server.cpp  protocol.cpp  redis_client.cpp  redis_server.cpp  thread_pool.cpp
phase4/mini-search/: CMakeLists.txt
phase4/mini-search/include/: document.h  indexer.h  query_processor.h  search_engine.h
phase4/mini-search/src/: debug_test.cpp  document.cpp  indexer.cpp  main.cpp  query_processor.cpp  search_engine.cpp
scripts/: docker-dev.sh  open_coverage.sh
tests/: CMakeLists.txt
tests/data/: test-wc.txt  test.txt
tests/phase1/: CMakeLists.txt
tests/phase1/cli-tools/: CMakeLists.txt  grep_test.cpp  ls_test.cpp  wc_test.cpp
tests/phase1/json-parser/: CMakeLists.txt  json_test.cpp
tests/phase1/logger/: CMakeLists.txt  logger_test.cpp
tests/phase2/memory-pool/: memory_pool_test.cpp
tests/phase2/process-manager/: process_manager_test.cpp
tests/phase2/threaded-downloader/: CMakeLists.txt  downloader_test.cpp
tests/phase3/http-server/: CMakeLists.txt  http_server_test.cpp
tests/phase3/tcp-chat-room/: CMakeLists.txt  chat_room_test.cpp
tests/phase3/tcp-file-transfer/: CMakeLists.txt  README.md  demonstrate_default_filenames.sh  file_transfer_protocol_test.cpp  tcp_file_client_test.cpp  tcp_file_server_test.cpp
tests/phase4/crawler/: CMakeLists.txt  crawler_test.cpp  crawler_tests_main.cpp  http_client_test.cpp  thread_pool_test.cpp  url_parser_test.cpp
tests/phase4/mini-redis/: CMakeLists.txt  exists_command_test.cpp  kv_store_test.cpp  protocol_test.cpp  redis_server_test.cpp
tests/phase4/mini-search/: CMakeLists.txt  document_test.cpp  indexer_test.cpp  query_processor_test.cpp  search_engine_test.cpp
